Fixed nasty white screen on dark mode. Also added Utterances as comment system.

--- a/css/blogstyle.css
+++ b/css/blogstyle.css
@@ -220,7 +220,7 @@ footer {
 .authordate {
   font-weight: 600;
   text-align: center;
-  padding: 1em 0 0 0;
+  padding: 1em 0 1em 0;
 }
 
 /* Paginator */
